fixed persona images spacing for better viewing across browsers

--- a/app/assets/stylesheets/revolution.css
+++ b/app/assets/stylesheets/revolution.css
@@ -150,8 +150,8 @@ code,pre{font:inherit;}
 .explorenewusercontent{margin-top:40px; background-color:white; overflow:hidden; width:681px;margin-left:auto;margin-right:auto; border-radius:6px;border: 1px solid rgba(0, 0, 0, .1); box-shadow: 0 0 30px 12px #888;}
 .exploreheader{ margin:0px; width:669px;padding:12px 0 5px 12px; background-color:#F9F9F9;}
 .exploreheader span{font: normal 21px 'Muli', sans-serif;}
-.exploretiles{margin-bottom:15px; }
-.singleexploretile{display:inline-block; padding:17px 27px 0 21px;}
+.exploretiles{margin-top:17px;}
+.singleexploretile{display:inline-block; padding:0 27px 0 21px;}
 .singleexploretile img{padding:6px 0 8px 0;}
 .singleexploretile a{margin:2px; text-decoration:none;}
 .singleexploretile a:hover img{border:2px solid rgba(51, 153, 255, 0.5); border-radius:4px; margin:-2px}
